--- a/src/app/style/fonts.scss
+++ b/src/app/style/fonts.scss
@@ -12,3 +12,10 @@
     font-weight: 500;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Boogaloo-Regular';
+    src: url('/fonts/Boogaloo-Regular.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
