Search ok pour démo

--- a/src/app/components/search/gameTagSearch/style.scss
+++ b/src/app/components/search/gameTagSearch/style.scss
@@ -1,8 +1,8 @@
 /* Conteneur principal */
-.tag-search-container {
+.game-tag-search {
     width: 100%;
     max-width: 400px;
-    margin: 0 auto;
+    margin: 25px auto 0;
     position: relative;
 }
 
