--- a/src/app/components/search/gameSettingButton/style.scss
+++ b/src/app/components/search/gameSettingButton/style.scss
@@ -1,21 +1,16 @@
 .game-setting-button {
-    width: 250px;
-    height: 250px;
+    width: 100%;
+    aspect-ratio: 1;
     border-radius: 5px;
     background: linear-gradient(45deg, #ff6b6b, #f9ca24, #22a6b3);
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 5px;
     cursor: pointer;  // Ajouter un curseur pointer
     transition: transform 0.2s ease-in-out;
     border: none;
     text-transform: uppercase;
     font-weight: bold;
-  
-    &:hover {
-      transform: scale(1.1); // Animation d'agrandissement au survol
-    }
   
     span {
       font-size: 16px;
