--- a/src/app/components/search/playlistCard/style.scss
+++ b/src/app/components/search/playlistCard/style.scss
@@ -8,6 +8,7 @@
     margin-bottom: 20px;
     background-color: #fff;
     transition: box-shadow 0.3s ease;
+    width: 100%;
     
     &:hover {
       box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
@@ -19,14 +20,14 @@
     }
   
     &__title {
-      font-size: 24px;
+      font-size: 16px;
       margin-bottom: 10px;
-      color: #333;
+      color: #fff;
     }
   
     &__setting, &__ambience {
       font-size: 16px;
-      color: #666;
+      color: #fff;
       margin-bottom: 5px;
     }
   }
