--- a/src/app/templates/search/style.scss
+++ b/src/app/templates/search/style.scss
@@ -1,5 +1,6 @@
 .template-search {
-    padding: 15px;
+    min-height: 100vh;
+    padding: 15px 15px 70px;
 
     &__title {
 
@@ -85,6 +86,37 @@
 
         li {
             width: 48%;
+        }
+    }
+
+    &__reset {
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        bottom: 0;
+        left: 0;
+        background: #000;
+        padding: 20px 0;
+        z-index: 1;
+
+    }
+
+    &__reset-button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 30px;
+        height: 30px;
+        overflow: hidden;
+        border: none;
+        background: none;
+
+        svg {
+            fill: #fff;
+            width: 100%;
+            height: 100%;
         }
     }
 }
